--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
     "private": true,
     "scripts": {
-        "dev": "vite",
-        "build:css": "tailwindcss -i ./styles.css -o ./dist/output.css",
-        "build:js": "vite build",
-        "build": "tailwindcss -i ./styles.css -o ./dist/output.css --watch"
-    },
+  "dev": "vite",
+  "build": "vite build"
+},
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
         "alpinejs": "^3.4.2",
